--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     
     <div class="container">
         <header>
-            <h1>ABC雜誌考試筆記（2025年12月號）</h1>
+            <h1>ABC雜誌考試筆記（2025-12）</h1>
             <p class="subtitle">單字篇</p>
         </header>
 
